--- a/report.tex
+++ b/report.tex
@@ -77,12 +77,17 @@ Proof:...
 \subsection {Distance, error correction}
 
 \section {Decoding}
+As mentioned earlier, the RM family of codes came into prominence because of the ease of deconding. In this section we present a variety of decoding algorithms. 
+Several very efficient algorithms have been known specially for the reed muller codes of the first order. 
 \subsection {Majority Logic Decoding}
-\subsection {Geometrical}
-\subsection {Hadamard Transforms}
 
+\subsection {Geometrical}
+
+\subsection {Hadamard Transforms}
+Green machine
 \subsection {List Decoding}
-\subsection {Introduction}
+Kabatiansky and Tavarnier
+
 \subsection {RM(1,m) decoding algorithm}
 
 \section {Uses of Reed Muller codes}
