--- a/report.bib
+++ b/report.bib
@@ -7,15 +7,8 @@
  annote = "Good for finite fields.Video lectures also available."
 }
 
-@misc{codingtheory+blog,
- author    = "",
- title     = " ",
- publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
- annote = "."
-}
 
-@misc{,
+@misc{jhall,
  author    = "",
  title     = " ",
  publisher = " ",
@@ -23,12 +16,6 @@
  annote = "Exhaustive lecture notes - almost like a book"
 }
 
-@misc{codingtheory+blog,
- author    = "",
- title     = " ",
- address   = "http://codingtheory.wordpress.com/",
- annote = "."
-}
 
 @misc{applications,
  author    = "",
@@ -47,24 +34,6 @@
 }
 
 
-@misc{codingtheory+blog,
- author    = "",
- title     = " ",
- publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
- annote = "."
-}
-
-
-@misc{codingtheory+blog,
- author    = "",
- title     = " ",
- publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
- annote = "."
-}
-
-
 @misc{side+channel,
  author    = "Thomas Roche, C´edric Tavernier ",
  title     = "Side channel attacks based on linearapproximations ",
@@ -74,7 +43,7 @@
 }
 
 
-@misc{codingtheory+blog,
+@misc{fourier,
  author    = "Parikshit Gopalan",
  title     = "A Fourier-analytic approach to Reed-Muller decoding. ",
  publisher = " ",
@@ -83,7 +52,7 @@
 }
 
 
-@misc{codingtheory+blog,
+@misc{weight+distributions,
  author    = " Tali Kaufman",
  title     = " The List-Decoding Size of Reed-Muller Codes",
  publisher = " ",
