--- a/report.bib
+++ b/report.bib
@@ -124,6 +124,7 @@
   year={2001},
   publisher={Cambridge Univ Pr}
 }
+
 @misc{sloane,
   title={{The Theory of Correcting Codes}},
   author={Sloane, N. and MacWilliams, F.},
@@ -171,9 +172,19 @@
 
 
 @misc{zuckerman10,
- author    = "Prof. David Zuckerman",
+ author    = "David Zuckerman",
  title     = "Lecture notes CS295T, Lecture 10.",
  publisher = " ",
  address   = "http://www.mth.msu.edu/~jhall/classes/codenotes/coding-notes.html ",
  annote = "Johnson proof"
+}
+
+@article{kasami,
+  title={{On the weight structure of Reed-Muller codes}},
+  author={Kasami, T. and Tokura, N.},
+  journal={IEEE Transactions on Information Theory},
+  volume={16},
+  number={6},
+  pages={752--759},
+  year={1970}
 }
