--- a/report.bib
+++ b/report.bib
@@ -35,10 +35,10 @@
 
 
 @misc{side+channel,
- author    = "Thomas Roche, C´edric Tavernier ",
+ author    = "Thomas Roche, Cedric Tavernier ",
  title     = "Side channel attacks based on linearapproximations ",
  publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
+ address   = "",
  annote = "."
 }
 
@@ -56,7 +56,7 @@
  author    = " Tali Kaufman",
  title     = " The List-Decoding Size of Reed-Muller Codes",
  publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
+ address   = "",
  annote = "weight distributions"
 }
 
@@ -64,7 +64,7 @@
  author    = "Jon Feldman, Ibrahim Abou-Faycal, Matteo Frigo",
  title     = "A Noise-Adaptive Algorithm for First-Order Reed-Muller Decoding",
  publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
+ address   = "",
  annote = "ieee802.11b"
 }
  
@@ -72,7 +72,7 @@
  author    = "Yuri Borissov, Nickolai Manev ",
  title     = "On the Non-Minimal Codewords in Binary Reed-Muller Codes  ",
  publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
+ address   = "",
  annote = "expands on sloane macwilliams"
 }
 
@@ -81,7 +81,7 @@
 ",
  title     = "Effcient Decoding Algorithms for Generalised Reed-Muller Codes",
  publisher = " ",
- address   = "http://codingtheory.wordpress.com/",
+ address   = "",
  annote = "."
 }
 
@@ -118,7 +118,7 @@
   year={2007}
 }
 
-@book{vanlint,
+@book{wilson,
   title={{A course in combinatorics}},
   author={van Lint, J.H. and Wilson, R.M.},
   year={2001},
@@ -132,6 +132,12 @@
   publisher={North Holland, Amsterdam}
 }
 
+@book{vanlint,
+  title={{Introduction to coding theory}},
+  author={Van Lint, J.H.},
+  year={1999},
+  publisher={Springer Verlag}
+}
 
 
 @book{pless,
@@ -140,6 +146,21 @@
   year={1998},
   publisher={Wiley-Interscience}
 }
+
+@book{huffman,
+  title={{Fundamentals of error-correcting codes}},
+  author={Huffman, W.C. and Pless, V.},
+  year={2003},
+  publisher={Cambridge Univ Pr}
+}
+
+@book{assmus1994designs,
+  title={{Designs and their Codes}},
+  author={Assmus, EF and Key, JD},
+  year={1994},
+  publisher={Cambridge Univ Pr}
+}
+
 
 @conference{gopalan2008list,
   title={{List-decoding Reed-Muller codes over small fields}},
@@ -187,4 +208,23 @@
   number={6},
   pages={752--759},
   year={1970}
+  
 }
+
+@article{incidence,
+  title={{Reed-Muller Codes and Incidence Matrices}},
+  author={Behbahani, M.K. and Khosrovshahi, GB and Tayfeh-Rezaie, B.},
+  publisher={Citeseer}
+}
+
+@article{runlen,
+  title={{Run-Length Properties of A Reed-Muller RM (1, m) Code with Applications in Channels With at Most One Synchronization Error}},
+  author={Dolecek, L. and Anantharam, V.},
+  journal={Relation},
+  volume={10},
+  number={1.15},
+  pages={7473},
+  year={2004},
+  publisher={Citeseer}
+}
+
